--- a/Atividade pontuada/HTML/index.html
+++ b/Atividade pontuada/HTML/index.html
@@ -15,6 +15,13 @@
             <a href="index.html">Home</a>
             <a href="p2.html">Quem Somos</a>
             <a href="p3.html">Contato</a>
+            <div class="login">
+                <form action="/action_page.php">
+                  <input type="text" placeholder="Username" name="username">
+                  <input type="text" placeholder="Password" name="psw">
+                  <button type="submit">Login</button>
+                </form>
+              </div>
             <hr/>
         </nav>
     </div>
